test/bad/arrays/decl08.px

[Int] a = []
[[Rat]] b = [[1/2], a]
